# Polaris

./: .gitignore  .npmrc  CLAUDE.md  LICENSE  PRODUCT.md  README.md  README_CN.md  README_EN.md  audit-ci.json  commitlint.config.mjs  eslint.config.js  git_commit.bat  git_status.bat  index.html  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  release-artifacts.md  tailwind.config.js  tempbash-test.txt  tmp_edit.py  tsconfig.json  tsconfig.node.json  turn_off_monitor.ps1  vite.config.ts  vitest.config.ts
crates/polaris-knowledge-mcp/: Cargo.toml
crates/polaris-knowledge-mcp/src/: compiler.rs  error.rs  extractor.rs  handler.rs  lib.rs  main.rs  migrate.rs  models.rs  parsing.rs  protocol.rs  seeder.rs  server.rs  tools.rs  validator.rs
crates/polaris-knowledge-mcp/tests/: live_data_sentry.rs  v2_pilot_index.rs
src-tauri/: Cargo.toml  build.rs  dingtalk-bridge.js  tauri.conf.json  tauri.dev.conf.json  tauri.windows.conf.json  tauri.windows.dev.conf.json
src-tauri/.cargo/: config.toml
src-tauri/capabilities/: default.json  webview.json
src-tauri/icons/: icon.icns
src-tauri/resources/agents/: NOTICE.md  agent-index.md  agent-roles.json  catalog.json  corpus-manifest.json  divisions.json  roster_manifest.json  rosters.json
src-tauri/resources/agents/activation/: _generic.md  agents-orchestrator.md  design-brand-guardian.md  design-ux-architect.md  engineering-ai-engineer.md  engineering-backend-architect.md  engineering-devops-automator.md  engineering-frontend-developer.md  engineering-rapid-prototyper.md  product-sprint-prioritizer.md  support-executive-summary-generator.md  testing-api-tester.md  testing-evidence-collector.md  testing-reality-checker.md
src-tauri/resources/agents/corpus/: engineering-network-engineer-china.md
src-tauri/resources/debug-agent/: PolarisDebugAgent.java
src-tauri/resources/nexus/: coordination.json  gates.json
src-tauri/resources/nexus/schemas/: escalation.json  phase-gate.json  qa-fail.json  qa-pass.json
src-tauri/src/: error.rs  lib.rs  main.rs  state.rs
src-tauri/src/ai/: event_parser.rs  history.rs  history_claude.rs  history_codex.rs  history_iflow.rs  mod.rs  registry.rs  session.rs  traits.rs  types.rs
src-tauri/src/ai/adapters/: claw_code_types.rs  convert.rs  mod.rs  openai_compat_client.rs
src-tauri/src/ai/engine/: claude.rs  claw_code.rs  codex.rs  codex_parser.rs  iflow.rs  mimo.rs  mod.rs  openai.rs  simple_ai.rs  simple_ai_protocol.rs
src-tauri/src/ai/engine/simple_ai/: agent.rs  chat_loop.rs  checkpoint_store.rs  compact.rs  compaction_plan.rs  context.rs  (+7 more)
src-tauri/src/ai/tools/: executor.rs  mod.rs  types.rs
src-tauri/src/commands/: agent_corpus.rs  agnes.rs  auto_mode.rs  browser.rs  chat.rs  claude_settings.rs  cli_info.rs  context.rs  data_root.rs  data_root_cmd.rs  diagnostics.rs  dialog_storage.rs  dispatch.rs  document_commands.rs  engine_install.rs  file_clipboard.rs  file_explorer.rs  file_watcher.rs  git.rs  history_index.rs  http_client.rs  integration.rs  knowledge.rs  logging.rs  long_goal.rs  lsp.rs  mcp_manager.rs  mobile_config.rs  mod.rs  model_profile.rs  nexus.rs  openai_proxy.rs  plugin.rs  plugin_service.rs  plugin_state.rs  port_manager.rs  prompt_snippet.rs  requirement.rs  scheduler.rs  spring_boot.rs  (+8 more)
src-tauri/src/integrations/: commands.rs  instance_registry.rs  manager.rs  mod.rs  traits.rs  types.rs
src-tauri/src/integrations/common/: conversation_store.rs  dedup.rs  mod.rs  session.rs
src-tauri/src/integrations/feishu/: adapter.rs  frame.rs  mod.rs
src-tauri/src/integrations/qqbot/: adapter.rs  mod.rs
src-tauri/src/models/: ai_event.rs  auto_mode.rs  cli_info.rs  config.rs  document_workspace.rs  events.rs  git.rs  iflow_events.rs  knowledge.rs  long_goal.rs  mod.rs  plugin.rs  plugin_state.rs  prompt.rs  prompt_snippet.rs  requirement.rs  scheduler.rs  task_template.rs  todo.rs
src-tauri/src/services/: agent_corpus.rs  agnes_mcp_server.rs  ask_listener.rs  ask_mcp_server.rs  auto_mode_service.rs  browser_mcp_server.rs  cli_info_service.rs  cli_resolver.rs  codex_service.rs  computer_mcp_server.rs  config_store.rs  data_migrator.rs  data_root.rs  dialog_index.rs  dispatch_mcp_server.rs  document_workspace_repository.rs  file_watcher.rs  git.rs  gpt55_model_catalog_template.json  http_client_mcp_server.rs  http_client_service.rs  http_client_storage.rs  iflow_service.rs  logger.rs  long_goal_mcp_server.rs  long_goal_service.rs  lsp.rs  lsp_config_repository.rs  lsp_index.rs  mcp_config_service.rs  mcp_diagnostics_service.rs  mcp_manager_service.rs  mod.rs  model_profile_service.rs  nexus_pipeline.rs  nexus_verdict.rs  openai_proxy.rs  openai_service.rs  plugin_service.rs  plugin_service_manager.rs  (+17 more)
src-tauri/src/services/computer_control/: capture.rs  clipboard.rs  input.rs  inspect.rs  mod.rs
src-tauri/src/services/git/: branch.rs  cherry_pick.rs  commit.rs  diff.rs  executor.rs  gitignore.rs  log.rs  mod.rs  rebase.rs  remote.rs  reset.rs  revert.rs  stash.rs  status.rs  tag.rs  utils.rs
src-tauri/src/services/lsp_index/: builder.rs  db.rs  extractor.rs  mod.rs  model.rs  query.rs  ranker.rs  regex_fallback.rs  schema.sql  service.rs  watcher.rs
src-tauri/src/services/proxy/: codex_chat.rs  error.rs  forwarder.rs  handlers.rs  mod.rs  models.rs  sanitizer.rs  server.rs  sse.rs  streaming.rs  transform.rs
src-tauri/src/services/scheduler/: continuation.rs  dispatcher.rs  execution_result.rs  local_file_storage.rs  migration_manager.rs  mod.rs  prompt_builder.rs  protocol_task.rs  protocol_template.rs  session_strategy.rs  sqlite_store.rs  storage.rs  storage_backend.rs  store.rs  unified_storage.rs
src-tauri/src/utils/: mod.rs
src-tauri/src/web/: auth.rs  emitter.rs  error.rs  event_broadcaster.rs  extractors.rs  integration_tests.rs  middleware.rs  mod.rs  router.rs  server.rs
src-tauri/src/web/api/: artifacts.rs  auth.rs  chat.rs  health.rs  ipc.rs  mod.rs  session.rs  settings.rs  ws.rs
src-tauri/tests/: claw_code_adapter_integration.rs  claw_code_engine_e2e.rs  openai_compat_integration.rs  scheduler_integration_test.rs
(+1390 files in other folders)
