[package]
name = "polaris"
version = "9.5.0"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "polaris"

[features]
default = ["tauri-app"]
tauri-app = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
]
tauri-plugin-updater = ["dep:tauri-plugin-updater"]
tauri-plugin-process = ["dep:tauri-plugin-process"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polaris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "polaris"
path = "src/main.rs"

[[bin]]
name = "polaris-todo-mcp"
path = "src/bin/polaris_todo_mcp.rs"

[[bin]]
name = "polaris-requirements-mcp"
path = "src/bin/polaris_requirements_mcp.rs"

[[bin]]
name = "polaris-scheduler-mcp"
path = "src/bin/polaris_scheduler_mcp.rs"

[[bin]]
name = "polaris-web"
path = "src/bin/polaris_web.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[dependencies]
tauri = { version = "2.0", features = ["devtools"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1"
glob = "0.3"
base64 = "0.22"
urlencoding = "2"
url = "2"
git2 = "0.18"
similar = "2.4"
bitflags = "2.4"
walkdir = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls"] }
futures-util = "0.3"
md5 = "0.7"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"
tauri-plugin-notification = { version = "2.3.3", optional = true }

# 集成模块依赖（rustls：纯 Rust TLS，不依赖系统 OpenSSL）
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
async-trait = "0.1"

# Web Access Layer - LAN HTTP/WS server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
if-addrs = "0.13"
subtle = "2"

# 定时任务依赖
cron = "0.12"

# 终端 PTY 支持
portable-pty = "0.8"
crossbeam-channel = "0.5"

# 文件系统监听
notify = { version = "6", features = ["macos_kqueue"] }
tauri-plugin-updater = { version = "2.10.1", optional = true }
tauri-plugin-process = { version = "2.3.1", optional = true }

# -- 平台条件依赖 --

[target.'cfg(windows)'.dependencies]
libloading = "0.8"

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
