[package]
name = "polaris"
version = "9.9.7"
description = "A Tauri App"
authors = ["you"]
edition = "2021"
default-run = "polaris"

[features]
default = ["tauri-app"]
tauri-app = [
    "dep:tauri",
    "dep:tauri-build",
    "dep:tauri-plugin-opener",
    "dep:tauri-plugin-dialog",
    "dep:tauri-plugin-notification",
    "dep:tauri-plugin-updater",
    "dep:tauri-plugin-process",
]
tauri-plugin-updater = ["dep:tauri-plugin-updater"]
tauri-plugin-process = ["dep:tauri-plugin-process"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "polaris_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "polaris"
path = "src/main.rs"

[[bin]]
name = "polaris-todo-mcp"
path = "src/bin/polaris_todo_mcp.rs"

[[bin]]
name = "polaris-requirements-mcp"
path = "src/bin/polaris_requirements_mcp.rs"

[[bin]]
name = "polaris-scheduler-mcp"
path = "src/bin/polaris_scheduler_mcp.rs"

[[bin]]
name = "polaris-prd-preview-mcp"
path = "src/bin/polaris_prd_preview_mcp.rs"

[[bin]]
name = "polaris-ask-mcp"
path = "src/bin/polaris_ask_mcp.rs"

[[bin]]
name = "polaris-agnes-mcp"
path = "src/bin/polaris_agnes_mcp.rs"

[[bin]]
name = "polaris-web"
path = "src/bin/polaris_web.rs"

# 电脑操作 MCP server。Windows 上为真实实现，其它平台为 stub（电脑操作依赖 Windows UI Automation）。
[[bin]]
name = "polaris-computer-mcp"
path = "src/bin/polaris_computer_mcp.rs"

[build-dependencies]
tauri-build = { version = "2.0", features = [], optional = true }

[dependencies]
tauri = { version = "2.0", features = ["devtools"], optional = true }
tauri-plugin-opener = { version = "2", optional = true }
tauri-plugin-dialog = { version = "2.7", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
encoding_rs = "0.8"
tokio = { version = "1", features = ["full"] }
tokio-util = "0.7"
uuid = { version = "1", features = ["v4", "serde"] }
dirs = "5"
thiserror = "1"
chrono = { version = "0.4", features = ["serde"] }
pathdiff = "0.2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tracing-appender = "0.2"
regex = "1"
ignore = "0.4"
glob = "0.3"
base64 = "0.22"
urlencoding = "2"
url = "2"
git2 = "0.18"
similar = "2.4"
bitflags = "2.4"
walkdir = "2"
reqwest = { version = "0.11", default-features = false, features = ["json", "stream", "rustls-tls", "blocking"] }
futures-util = "0.3"
md5 = "0.7"
zip = { version = "0.6", default-features = false, features = ["deflate"] }
tempfile = "3"
tauri-plugin-notification = { version = "2.3.3", optional = true }

# 集成模块依赖（rustls：纯 Rust TLS，不依赖系统 OpenSSL）
tokio-tungstenite = { version = "0.21", features = ["rustls-tls-native-roots"] }
async-trait = "0.1"

# Web Access Layer - LAN HTTP/WS server
axum = { version = "0.8", features = ["ws"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
if-addrs = "0.13"
subtle = "2"

# 内嵌代理服务（Anthropic ↔ OpenAI Chat Completions 格式转换）
async-stream = "0.3"
bytes = "1"

# 定时任务依赖
cron = "0.12"

# 终端 PTY 支持
portable-pty = "0.8"
crossbeam-channel = "0.5"

# 文件系统监听
notify = { version = "6", features = ["macos_kqueue"] }
notify-debouncer-mini = { version = "0.4", default-features = false, features = ["serde"] }

# 轻量索引引擎（Phase J）
# - rusqlite bundled: 无需系统 sqlite3
# - tree-sitter + tree-sitter-java: AST 级 Java 符号提取
# - rayon: 全量索引并行
# - xxhash-rust: 文件内容 hash（mtime 不可靠时校验）
rusqlite = { version = "0.32", features = ["bundled"] }
tree-sitter = "0.22"
tree-sitter-java = "0.21"
rayon = "1.10"
xxhash-rust = { version = "0.8", features = ["xxh3"] }
tauri-plugin-updater = { version = "2.10.1", optional = true }
tauri-plugin-process = { version = "2.3.1", optional = true }

# -- 平台条件依赖 --

[target.'cfg(windows)'.dependencies]
libloading = "0.8"
# 电脑操作（Windows-only）：截图(xcap) + 鼠标键盘模拟(enigo) + 控件树(uiautomation)。
# 核心能力 inspect_ui 依赖 Windows UI Automation，故整体限定 Windows 编译；
# 其它平台不引入这些依赖，避免 Linux CI 需要 pipewire/xcb/zbus 等系统库。
# 图片编码复用 xcap re-export 的 image crate（xcap::image），避免版本错配。
enigo = "0.6"
xcap = "0.9"
# 默认 features(input+control) 提供键鼠模拟与控件操作(click/double_click/right_click)；
# clipboard feature 额外提供剪贴板模块与 UIElement::send_text_by_clipboard。
uiautomation = { version = "0.25", features = ["clipboard"] }
windows-sys = { version = "0.59", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_Shell",
    "Win32_UI_WindowsAndMessaging",
] }

[target.'cfg(not(windows))'.dependencies]
libc = "0.2"
