[package]
name = "polaris-knowledge-mcp"
version = "9.2.1"
edition = "2021"
description = "Standalone MCP server for AI-native project knowledge management"
authors = ["Polaris Team"]
license = "MIT"

[lib]
name = "polaris_knowledge_mcp"
path = "src/lib.rs"

[[bin]]
name = "polaris-knowledge-mcp"
path = "src/main.rs"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "std", "serde"] }
regex = "1"

[dev-dependencies]
tempfile = "3"
